crates/uselesskey-manifest/tests/snapshots/manifest__bundle_receipt.snap
---
source: crates/uselesskey-manifest/tests/manifest.rs
expression: "String::from_utf8(bundle.to_canonical_json_vec().expect(\"serialize\")).expect(\"utf8\")"
---
{
  "bundle_name": "example",
  "receipts": [
    {
      "schema_version": 1,
      "uselesskey_version": "0.5.1",
      "domain": "d",
      "label": "a",
      "variant": "good",
      "spec_fingerprint": "6eac81badc8e459696f472aa72d7444770f7a426b4d0b27baa6fc1395282b783",
      "derivation_version": 1,
      "generated_at_mode": "deterministic",
      "files": [
        {
          "logical_name": "key",
          "path": "a/key.pem",
          "format": "pem",
          "sha256": "9834876dcfb05cb167a5c24953eba58c4ac89b1adf57f28f2f9d09af107ee8f0",
          "blake3": "30c0f9c6a167fc2a91285c85be7ea341569b3b39fcc5f77fd34534cade971d20",
          "byte_len": 3
        }
      ],
      "metadata": {}
    },
    {
      "schema_version": 1,
      "uselesskey_version": "0.5.1",
      "domain": "d",
      "label": "b",
      "variant": "good",
      "spec_fingerprint": "15cf329d227352fb5542e8ce7d984e90b16fd7d6c84d13363ae703e74e8f41b8",
      "derivation_version": 1,
      "generated_at_mode": "deterministic",
      "files": [
        {
          "logical_name": "key",
          "path": "b/key.pem",
          "format": "pem",
          "sha256": "3e744b9dc39389baf0c5a0660589b8402f3dbb49b89b3e75f2c9355852a3c677",
          "blake3": "7e7a85e46119db2fff2c49633ffa52316e84c1e91b3b9679f730104dd03a6964",
          "byte_len": 3
        }
      ],
      "metadata": {}
    }
  ],
  "relationships": [
    {
      "relation": "token_signed_by",
      "from": "token-a",
      "to": "key-a"
    }
  ]
}
